--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,12 @@ crashlytics-build.properties
 
 # Asset Packs
 /[Aa]sset Packs/
+
+# Ignore only specific Rider files/directories
+# For syntax see: https://stackoverflow.com/a/14422549/12124
+/.idea/*
+!/.idea/.idea.*
+/.idea/.idea.*/*
+!/.idea/.idea.*/.idea
+/.idea/.idea.*/.idea/*
+!/.idea/.idea.*/.idea/runConfigurations
